welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:44: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:47: error: expected start of definition
	override def forward()  {
                 ^Diagonal:50: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:53: error: expected start of definition
	override def backward() {
                 ^Diagonal:56: error: Unmatched closing brace '}' ignored here
}
^